[package]
name = "cvldoc_parser_core"
version = "1.0.1"
edition = "2021"

[dependencies]
assert_matches = "1.5.0"
chumsky = "0.9.2"
color-eyre = "0.6.2"
indoc = "1.0.9"
itertools = "0.10.5"
lsp-types = "0.93.2"
once_cell = "1.17.1"
regex = "1.8.1"
ropey = "1.6.0"
serde = { version = "1.0.163", features = ["derive"] }
tap = "1.0.1"
