[package]
name = "cvldoc_parser_core"
version = "2.0.1"
edition = "2021"

[dependencies]
assert_matches = "1.5.0"
chumsky = "0.9.2"
color-eyre = "0.6.2"
indoc = "2"
itertools = "0.11"
lsp-types = "0.94.0"
once_cell = "1.17.1"
regex = "1"
ropey = "1.6.0"
serde = { version = "1", features = ["derive"] }
tap = "1"
