[package]
name = "cvldoc_parser_py"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cvldoc_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "abi3-py37"] }
cvldoc_parser_core = { path = "../.." }
color-eyre = "0.6.2"
indoc = "1.0.7"
itertools = "0.10.4"
lsp-types = "0.93.1"
