[package]
name = "cvldoc_parser_py"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cvldoc_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3-py37"] }
cvldoc_parser_core = { path = "../.." }
color-eyre = "0.6.2"
indoc = "2.0.1"
itertools = "0.10.5"
lsp-types = "0.94"
