[package]
name = "cvldoc_parser_py"
version = "2.0.0"
edition = "2021"

[lib]
name = "cvldoc_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py37"] }
cvldoc_parser_core = { path = "../.." }
color-eyre = "0.6.2"
indoc = "2"
itertools = "0.10.5"
lsp-types = "0.94"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
pythonize = "0.19.0"