[build-system]
requires = ["maturin>=1.2.3"]
build-backend = "maturin"

[project]
name = "cvldoc_parser"
version = "2.0.0b1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

