[build-system]
requires = ["maturin>=1.5.0"]
build-backend = "maturin"

[project]
name = "cvldoc_parser"
version = "2.0.1"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

